overflow issue

--- a/styles/light/modal.css
+++ b/styles/light/modal.css
@@ -41,7 +41,7 @@
     overflow-y: auto;
     padding-right: 20px;
     position: relative;
-    overflow-x: hidden;
+    overflow: hidden;
 
 }
 
